force-app/main/default/objects/Alumni_Profile__c/Alumni_Profile__c.object-meta.xml
<CustomObject>
    <label>Alumni Profile</label>
    <nameField>
        <displayFormat>ALUM-{0000}</displayFormat>
        <label>Alumni Profile ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alumni Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>