force-app/main/default/objects/Alumni_Profile__c/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <label>Degree</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bachelor of Arts (BA)</fullName>
            </value>
            <value>
                <fullName>Bachelor of Science (BS)</fullName>
            </value>
            <value>
                <fullName>Bachelor of Business Administration (BBA)</fullName>
            </value>
            <value>
                <fullName>Bachelor of Fine Arts (BFA)</fullName>
            </value>
            <value>
                <fullName>Bachelor of Engineering (BEng)</fullName>
            </value>
            <value>
                <fullName>Bachelor of Technology (BTech)</fullName>
            </value>
            <value>
                <fullName>Bachelor of Education (BEd)</fullName>
            </value>
            <value>
                <fullName>Bachelor of Nursing (BN)</fullName>
            </value>
            <value>
                <fullName>Bachelor of Computer Science (BCS)</fullName>
            </value>
            <value>
                <fullName>Bachelor of Information Technology (BIT)</fullName>
            </value>
            <value>
                <fullName>Bachelor of Information Systems (BIS)</fullName>
            </value>
            <value>
                <fullName>Bachelor of Computer Engineering (BCE)</fullName>
            </value>
            <value>
                <fullName>Master of Arts (MA)</fullName>
            </value>
            <value>
                <fullName>Master of Science (MS)</fullName>
            </value>
            <value>
                <fullName>Master of Business Administration (MBA)</fullName>
            </value>
            <value>
                <fullName>Master of Fine Arts (MFA)</fullName>
            </value>
            <value>
                <fullName>Master of Education (MEd)</fullName>
            </value>
            <value>
                <fullName>Master of Engineering (MEng)</fullName>
            </value>
            <value>
                <fullName>Master of Public Administration (MPA)</fullName>
            </value>
            <value>
                <fullName>Master of Social Work (MSW)</fullName>
            </value>
            <value>
                <fullName>Master of Computer Science (MCS)</fullName>
            </value>
            <value>
                <fullName>Master of Information Technology (MIT)</fullName>
            </value>
            <value>
                <fullName>Master of Information Systems (MIS)</fullName>
            </value>
            <value>
                <fullName>Master of Computer Engineering (MCE)</fullName>
            </value>
            <value>
                <fullName>Doctor of Philosophy (PhD)</fullName>
            </value>
            <value>
                <fullName>Doctor of Education (EdD)</fullName>
            </value>
            <value>
                <fullName>Doctor of Business Administration (DBA)</fullName>
            </value>
            <value>
                <fullName>Doctor of Nursing Practice (DNP)</fullName>
            </value>
            <value>
                <fullName>Doctor of Computer Science (DCS)</fullName>
            </value>
            <value>
                <fullName>Doctor of Information Technology (DIT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>