force-app/main/default/objects/Alumni_Profile__c/fields/Emergency_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Address__c</fullName>
    <label>Emergency Contact Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>