force-app/main/default/objects/Alumni_Profile__c/fields/Has_Major__c.field-meta.xml
<CustomField>
    <fullName>Has_Major__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Major</label>
    <type>Checkbox</type>
</CustomField>