force-app/main/default/objects/Alumni_Profile__c/fields/Honors_and_Awards__c.field-meta.xml
<CustomField>
    <fullName>Honors_and_Awards__c</fullName>
    <label>Honors and Awards</label>
    <type>TextArea</type>
</CustomField>