force-app/main/default/objects/Alumni_Profile__c/fields/Major_Field_of_Study__c.field-meta.xml
<CustomField>
    <fullName>Major_Field_of_Study__c</fullName>
    <label>Major/Field of Study</label>
    <length>100</length>
    <type>Text</type>
</CustomField>