force-app/main/default/objects/Alumni_Profile__c/fields/Minor_Field_of_Study__c.field-meta.xml
<CustomField>
    <fullName>Minor_Field_of_Study__c</fullName>
    <label>Minor Field of Study</label>
    <length>100</length>
    <type>Text</type>
</CustomField>